# dryclean

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: dryclean.yml  publish.yml
ci/: action.yml
describe/: action.yml  prompt.md
docs/: QUALITY_CHECKS.md
docs/css/: CODE_GUIDELINES.md  COMMENTING_GUIDELINES.md
docs/go/: CODE_GUIDELINES.md  COMMENTING_GUIDELINES.md
docs/html/: CODE_GUIDELINES.md  COMMENTING_GUIDELINES.md
docs/javascript/: CODE_GUIDELINES.md  COMMENTING_GUIDELINES.md
docs/python/: CODE_GUIDELINES.md  COMMENTING_GUIDELINES.md
docs/shell/: CODE_GUIDELINES.md  COMMENTING_GUIDELINES.md
review/: action.yml  prompt.md
src/dryclean/: __init__.py  checker.py  cli.py  constant.py  github.py  hook.py  util.py
src/dryclean/scripts/css/: check_comment_density.py  check_comment_period.py  check_inline_comments.py  check_kebab_case_filename.py  check_nesting_depth.py  check_no_id_selectors.py  check_no_important.py  check_section_dividers.py
src/dryclean/scripts/go/: check_argument_count.py  check_comment_density.py  check_comment_period.py  check_constant_placement.py  check_function_length.py  check_inline_comments.py  check_section_dividers.py  check_snake_case_filename.py
src/dryclean/scripts/html/: check_comment_density.py  check_comment_period.py  check_data_attribute_naming.py  check_deprecated_elements.py  check_inline_comments.py  check_kebab_case_filename.py  check_section_dividers.py
src/dryclean/scripts/javascript/: check_comment_density.py  check_comment_period.py  check_constant_placement.py  check_function_length.py  check_inline_comments.py  check_section_dividers.py  (+1 more)
src/dryclean/templates/: CLAUDE.md.tmpl  __init__.py  dryclean.yml.tmpl  eslint.config.cjs.tmpl  eslintrc.json.tmpl  golangci.yml.tmpl  htmlhintrc.json.tmpl  mypy.ini.tmpl  pre-commit-ci.yaml.tmpl  pre-commit-local.yaml.tmpl  ruff.toml.tmpl  stylelintrc.json.tmpl
(+19 files in other folders)
