[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{ name = "Arup Kumar Maiti", email = "arup@arupkumarmaiti.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "commitizen>=4.13.10",
  "pre-commit>=4.5.1",
  "pyyaml>=6.0",
  "rich>=15.0",
]
description = "Multi-language code quality toolkit"
dynamic = ["version"]
license = "MIT"
name = "dryclean"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
dryclean = "dryclean.cli:main"

[project.urls]
Homepage = "https://github.com/arup-kumar-maiti/dryclean"
Repository = "https://github.com/arup-kumar-maiti/dryclean"

[tool.hatch.build.targets.wheel]
packages = ["src/dryclean"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>\\d+\\.\\d+\\.\\d+)"
